IllinoisGRMHD: reconstruct_set_of_prims_PPM -- added the discussion around the compute_P_cold__gamma_cold() function

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_reconstruct_set_of_prims_PPM.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_reconstruct_set_of_prims_PPM.ipynb
@@ -286,16 +286,16 @@
     "## Step 2.b: Evaluation of $dU_{i}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{computation_of_du}$$\n",
     "\n",
-    "We will need $dU_{i} \\equiv U_{i} - U_{i-1}$ in order to compute $U_{r}$ and $U_{l}$. We will then compute (notice the notation change $i\\to i+0$ so that it is easier to understand the C code that follows):\n",
+    "We will need $\\delta U_{i} \\equiv U_{i} - U_{i-1}$ in order to compute $U_{r}$ and $U_{l}$. We will then compute (notice the notation change $i\\to i+0$ so that it is easier to understand the C code that follows):\n",
     "\n",
     "\\begin{align}\n",
-    "dU_{i-1} &= U_{i-1} - U_{i-2}\\ ,\\\\\n",
-    "dU_{i+0} &= U_{i+0} - U_{i-1}\\ ,\\\\\n",
-    "dU_{i+1} &= U_{i+1} - U_{i+0}  \\ ,\\\\\n",
-    "dU_{i+2} &= U_{i+2} - U_{i+1}\\ .\n",
+    "\\delta U_{i-1} &= U_{i-1} - U_{i-2}\\ ,\\\\\n",
+    "\\delta U_{i+0} &= U_{i+0} - U_{i-1}\\ ,\\\\\n",
+    "\\delta U_{i+1} &= U_{i+1} - U_{i+0}  \\ ,\\\\\n",
+    "\\delta U_{i+2} &= U_{i+2} - U_{i+1}\\ .\n",
     "\\end{align}\n",
     "\n",
-    "After evaluating the differences $dU$, we compute the slope-limited $dU$, $dU^{\\rm slope-lim}$, using the [`slope_limit()` function](#slope_limit)."
+    "After evaluating the differences $\\delta U$, we compute the slope-limited $\\delta U$, $\\delta U^{\\rm slope-lim}$, using the [`slope_limit()` function](#slope_limit)."
    ]
   },
   {
@@ -344,8 +344,8 @@
     "We now compute $U_{r}$ and $U_{l}$. Keep in mind that $U_{i,r} = U_{i+1/2}$, while $U_{i,l} = U_{i-1/2}$. The implemented equation follows eq. A1 in [Duez *et al.* (2005)](http://arxiv.org/pdf/astro-ph/0503420.pdf), but with the standardd PPM coefficient of $\\frac{1}{6}$ (i.e. eq. A1 with $\\frac{1}{8}\\to\\frac{1}{6}$). Keep in mind that we simplify the equation slightly before implementing it:\n",
     "\n",
     "\\begin{align}\n",
-    "U_{i+0,r} &= U_{i+0} + \\frac{1}{2}\\left(U_{i+1} - U_{i+0}\\right) + \\frac{1}{6}\\left(dU^{\\rm slope-lim}_{i+0} - dU^{\\rm slope-lim}_{i+1}\\right) \\Rightarrow \\boxed{U_{i+0,r} = \\frac{1}{2}\\left(U_{i+1} + U_{i+0}\\right) + \\frac{1}{6}\\left(dU^{\\rm slope-lim}_{i+0} - dU^{\\rm slope-lim}_{i+1}\\right)}\\ ,\\\\\n",
-    "U_{i+0,l} &= U_{i-1} + \\frac{1}{2}\\left(U_{i+0} - U_{i-1}\\right) + \\frac{1}{6}\\left(dU^{\\rm slope-lim}_{i-1} - dU^{\\rm slope-lim}_{i+0}\\right) \\Rightarrow \\boxed{U_{i+0,l} = \\frac{1}{2}\\left(U_{i+0} + U_{i-1}\\right) + \\frac{1}{6}\\left(dU^{\\rm slope-lim}_{i-1} - dU^{\\rm slope-lim}_{i+0}\\right)}\\ .\n",
+    "U_{i+0,r} &= U_{i+0} + \\frac{1}{2}\\left(U_{i+1} - U_{i+0}\\right) + \\frac{1}{6}\\left(\\delta U^{\\rm slope-lim}_{i+0} - \\delta U^{\\rm slope-lim}_{i+1}\\right) \\Rightarrow \\boxed{U_{i+0,r} = \\frac{1}{2}\\left(U_{i+1} + U_{i+0}\\right) + \\frac{1}{6}\\left(\\delta U^{\\rm slope-lim}_{i+0} - \\delta U^{\\rm slope-lim}_{i+1}\\right)}\\ ,\\\\\n",
+    "U_{i+0,l} &= U_{i-1} + \\frac{1}{2}\\left(U_{i+0} - U_{i-1}\\right) + \\frac{1}{6}\\left(\\delta U^{\\rm slope-lim}_{i-1} - \\delta U^{\\rm slope-lim}_{i+0}\\right) \\Rightarrow \\boxed{U_{i+0,l} = \\frac{1}{2}\\left(U_{i+0} + U_{i-1}\\right) + \\frac{1}{6}\\left(\\delta U^{\\rm slope-lim}_{i-1} - \\delta U^{\\rm slope-lim}_{i+0}\\right)}\\ .\n",
     "\\end{align}\n",
     "\n",
     "After this step, the values of $U_{i+0,r,l}$ are stored as outputs."
@@ -533,7 +533,16 @@
     "<a id='slope_limit'></a>\n",
     "\n",
     "# Step 3: The `slope_limit()` function \\[Back to [top](#toc)\\]\n",
-    "$$\\label{slope_limit}$$"
+    "$$\\label{slope_limit}$$\n",
+    "\n",
+    "We will now show the definition of $\\delta U^{\\rm slope-lim}$. The reason why we introduce this slope-limited procedure is twofold. First, it leads to steeper representations of discontinuities, and second it guarantees that $U_{i+1/2}$ lies inside the range $\\left[U_{i},U_{i+1}\\right]$.\n",
+    "\n",
+    "We start by defining\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\delta U_{i} &\\equiv U_{i} - U_{i-1}\\ ,\\\\\n",
+    "\\delta_{m} U_{i} &\\equiv \\frac{\\delta U_{i} + \\delta U_{i+1}}{2} = \\frac{U_{i+1} - U_{i-1}}{2}\\ .\n",
+    "\\end{align}"
    ]
   },
   {
@@ -562,7 +571,42 @@
     "static inline CCTK_REAL slope_limit(CCTK_REAL dU,CCTK_REAL dUp1) {\n",
     "  if(dU*dUp1 > 0.0) {\n",
     "    //delta_m_U=0.5 * [ (u_(i+1)-u_i) + (u_i-u_(i-1)) ] = (u_(i+1) - u_(i-1))/2  <-- first derivative, second-order; this should happen most of the time (smooth flows)\n",
-    "    CCTK_REAL delta_m_U = 0.5*(dU + dUp1);\n",
+    "    CCTK_REAL delta_m_U = 0.5*(dU + dUp1);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we implement the slope-limited $\\delta U$ as\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\\delta U^{\\rm slope-lim} \\equiv\n",
+    "\\left\\{\n",
+    "\\begin{matrix}\n",
+    "{\\rm sign}\\left(\\delta_{m} U_{i}\\right)\\min\\left(\\left|\\delta_{m} U_{i}\\right|,c\\left|\\delta U_{i}\\right|,c\\left|\\delta U_{i+1}\\right|\\right) & ,\\ {\\rm if}\\ dU_{i}dU_{i+1} > 0\\\\\n",
+    "0 &.\\ {\\rm otherwise}\n",
+    "\\end{matrix}\n",
+    "\\right.}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to reconstruct_set_of_prims_PPM.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a reconstruct_set_of_prims_PPM.C\n",
+    "\n",
     "    // EXPLANATION OF BELOW LINE OF CODE.\n",
     "    // In short, sign_delta_a_j = sign(delta_m_U) = (0.0 < delta_m_U) - (delta_m_U < 0.0).\n",
     "    //    If delta_m_U>0, then (0.0 < delta_m_U)==1, and (delta_m_U < 0.0)==0, so sign_delta_a_j=+1\n",
@@ -573,7 +617,7 @@
     "    return sign_delta_m_U*MIN(fabs(delta_m_U),MIN(SLOPE_LIMITER_COEFF*fabs(dUp1),SLOPE_LIMITER_COEFF*fabs(dU)));\n",
     "  }\n",
     "  return 0.0;\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -600,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -823,9 +867,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to reconstruct_set_of_prims_PPM.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a reconstruct_set_of_prims_PPM.C\n",
     "\n",
@@ -854,9 +906,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to reconstruct_set_of_prims_PPM.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a reconstruct_set_of_prims_PPM.C\n",
     "\n",
@@ -885,9 +945,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to reconstruct_set_of_prims_PPM.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a reconstruct_set_of_prims_PPM.C\n",
     "\n",
@@ -914,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -942,12 +1010,83 @@
     "<a id='compute_p_cold__gamma_cold'></a>\n",
     "\n",
     "# Step 6: The `compute_P_cold__gamma_cold()` function \\[Back to [top](#toc)\\]\n",
-    "$$\\label{compute_p_cold__gamma_cold}$$"
+    "$$\\label{compute_p_cold__gamma_cold}$$\n",
+    "\n",
+    "This part of the code evaluates $P_{\\rm cold}$ and $\\Gamma_{\\rm cold}$ for the equations of state (EOS) presented in eqs. 13-16 of [Stephens *et al.* (2008)](http://arxiv.org/pdf/0802.0200.pdf).\n",
+    "\n",
+    "First, if $\\rho_{b} = 0$, then $P_{\\rm cold} = 0$ and $\\Gamma_{\\rm cold}$ simply receives its tabulated value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a reconstruct_set_of_prims_PPM.C\n",
+    "\n",
+    "\n",
+    "static inline void compute_P_cold__gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &gamma_cold) {\n",
+    "  // This code handles equations of state of the form defined\n",
+    "  // in Eqs 13-16 in http://arxiv.org/pdf/0802.0200.pdf\n",
+    "\n",
+    "  // Default in case rho_b == 0.0\n",
+    "  if(rho_b==0.0) { P_cold = 0.0; gamma_cold = eos.gamma_tab[0]; return; }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we consider the case where the EOS is given by\n",
+    "\n",
+    "$$\n",
+    "\\boxed{P_{\\rm cold} = \\kappa \\rho_{b}^{\\Gamma_{\\rm cold}}}\\ .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a reconstruct_set_of_prims_PPM.C\n",
+    "\n",
+    "\n",
+    "  if(eos.neos==1) {\n",
+    "    // Eq. 14 of http://arxiv.org/pdf/0802.0200.pdf :\n",
+    "    // P_{cold} = K_i rho_i^{\\Gamma_i}\n",
+    "    P_cold = eos.k_tab[0]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[0]);\n",
+    "    gamma_cold = eos.gamma_tab[0];\n",
+    "    return;\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, we implement a piecewise polytrope EOS, which is given by, in the case where ${\\rm eos.neos} = 2$\n",
+    "\n",
+    "$$\n",
+    "\\boxed{P_{\\rm cold} \n",
+    "= \n",
+    "\\left\\{\n",
+    "\\begin{matrix}\n",
+    "\\kappa_{1} \\rho_{b}^{\\Gamma_{1}} & {\\rm for}\\ \\rho \\leq \\rho_{\\rm nuc}\\\\\n",
+    "\\kappa_{2} \\rho_{b}^{\\Gamma_{2}} & {\\rm for}\\ \\rho \\geq \\rho_{\\rm nuc}\n",
+    "\\end{matrix}\n",
+    "\\right.\n",
+    "}\\ .\n",
+    "$$\n",
+    "\n",
+    "Notice that we left the fact that $\\Gamma_{i} \\equiv \\Gamma_{{\\rm cold},i}$ implicit above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -961,21 +1100,6 @@
    "source": [
     "%%writefile -a reconstruct_set_of_prims_PPM.C\n",
     "\n",
-    "\n",
-    "static inline void compute_P_cold__gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &gamma_cold) {\n",
-    "  // This code handles equations of state of the form defined\n",
-    "  // in Eqs 13-16 in http://arxiv.org/pdf/0802.0200.pdf\n",
-    "\n",
-    "  // Default in case rho_b == 0.0\n",
-    "  if(rho_b==0.0) { P_cold = 0.0; gamma_cold = eos.gamma_tab[0]; return; }\n",
-    "\n",
-    "  if(eos.neos==1) {\n",
-    "    // Eq. 14 of http://arxiv.org/pdf/0802.0200.pdf :\n",
-    "    // P_{cold} = K_i rho_i^{\\Gamma_i}\n",
-    "    P_cold = eos.k_tab[0]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[0]);\n",
-    "    gamma_cold = eos.gamma_tab[0];\n",
-    "    return;\n",
-    "  }\n",
     "  for(int nn=1;nn<eos.neos;nn++) {\n",
     "    if (rho_b <= eos.rho_tab[nn]  &&  rho_b > eos.rho_tab[nn-1]) {\n",
     "      P_cold = eos.k_tab[nn]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[nn]);\n",
@@ -1001,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1107,34 +1231,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-09-18 12:38:25--  https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/reconstruct_set_of_prims_PPM.C\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.2, 18.205.93.0, 18.205.93.1\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.2|:443... connected.\n",
+      "--2019-09-18 15:03:53--  https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/reconstruct_set_of_prims_PPM.C\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.1, 18.205.93.2\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 18267 (18K) [text/plain]\n",
       "Saving to: ‘reconstruct_set_of_prims_PPM-validation.C’\n",
       "\n",
-      "reconstruct_set_of_ 100%[===================>]  17.84K  --.-KB/s    in 0s      \n",
+      "reconstruct_set_of_ 100%[===================>]  17.84K  --.-KB/s    in 0.03s   \n",
       "\n",
-      "2019-09-18 12:38:25 (74.1 MB/s) - ‘reconstruct_set_of_prims_PPM-validation.C’ saved [18267/18267]\n",
+      "2019-09-18 15:03:53 (600 KB/s) - ‘reconstruct_set_of_prims_PPM-validation.C’ saved [18267/18267]\n",
       "\n",
-      "--2019-09-18 12:38:26--  https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/loop_defines_reconstruction.h\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.1, 18.205.93.2\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\n",
+      "--2019-09-18 15:03:54--  https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/loop_defines_reconstruction.h\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.1, 18.205.93.2, 18.205.93.0\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.1|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 2472 (2.4K) [text/plain]\n",
       "Saving to: ‘loop_defines_reconstruction-validation.h’\n",
       "\n",
       "loop_defines_recons 100%[===================>]   2.41K  --.-KB/s    in 0s      \n",
       "\n",
-      "2019-09-18 12:38:26 (139 MB/s) - ‘loop_defines_reconstruction-validation.h’ saved [2472/2472]\n",
+      "2019-09-18 15:03:54 (60.4 MB/s) - ‘loop_defines_reconstruction-validation.h’ saved [2472/2472]\n",
       "\n"
      ]
     }
@@ -1153,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1309,11 @@
       "89c89\n",
       "< \n",
       "---\n",
-      ">    \n"
+      ">    \n",
+      "272c272\n",
+      "<   \n",
+      "---\n",
+      "> \n"
      ]
     }
    ],
@@ -1240,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1592,47 @@
       "Refer to http://pandoc.org/installing.html.\n",
       "Continuing with doubts...\n",
       "  check_pandoc_version()\n",
-      "[NbConvertApp] Writing 132272 bytes to Tutorial-IllinoisGRMHD_reconstruct_set_of_prims_PPM.tex\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "[NbConvertApp] Writing 141199 bytes to Tutorial-IllinoisGRMHD_reconstruct_set_of_prims_PPM.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
