BaikalETK: Everything compiles!

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -151,7 +151,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 5.20305609703 seconds.\n"
+      "Finished BSSN symbolic expressions in 5.32087206841 seconds.\n"
      ]
     }
    ],
@@ -225,6 +225,8 @@
     "end = time.time()\n",
     "print(\"Finished BSSN symbolic expressions in \"+str(end-start)+\" seconds.\")\n",
     "\n",
+    "\n",
+    "\n",
     "def BSSN_RHSs():\n",
     "    print(\"Generating C code for BSSN RHSs in \"+par.parval_from_str(\"reference_metric::CoordSystem\")+\" coordinates.\")\n",
     "    start = time.time()\n",
@@ -259,8 +261,8 @@
     "                                      upwindcontrolvec=betaU)\n",
     "\n",
     "    with open(os.path.join(outdir,\"BSSN_RHSs.h\"), \"w\") as file:\n",
-    "        file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
-    "                           [\"NGHOSTS+Nxx2\",\"NGHOSTS+Nxx1\",\"NGHOSTS+Nxx0\"],\n",
+    "        file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"cctk_nghostzones[2]\",\"cctk_nghostzones[1]\",\"cctk_nghostzones[0]\"],\n",
+    "       [\"cctk_lsh[2]-cctk_nghostzones[2]\",\"cctk_lsh[1]-cctk_nghostzones[1]\",\"cctk_lsh[0]-cctk_nghostzones[0]\"],\n",
     "                           [\"1\",\"1\",\"SIMD_width\"],\n",
     "                            [\"#pragma omp parallel for\",\n",
     "                                         \"#include \\\"rfm_files/rfm_struct__SIMD_outer_read2.h\\\"\",\n",
@@ -281,8 +283,8 @@
     "                                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"RbarDD22\"),rhs=Bq.RbarDD[2][2])],\n",
     "                                   params=\"outCverbose=False,SIMD_enable=True\")\n",
     "    with open(os.path.join(outdir,\"BSSN_Ricci.h\"), \"w\") as file:\n",
-    "        file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
-    "                           [\"NGHOSTS+Nxx2\",\"NGHOSTS+Nxx1\",\"NGHOSTS+Nxx0\"],\n",
+    "        file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"cctk_nghostzones[2]\",\"cctk_nghostzones[1]\",\"cctk_nghostzones[0]\"],\n",
+    "       [\"cctk_lsh[2]-cctk_nghostzones[2]\",\"cctk_lsh[1]-cctk_nghostzones[1]\",\"cctk_lsh[0]-cctk_nghostzones[0]\"],\n",
     "                           [\"1\",\"1\",\"SIMD_width\"],\n",
     "                            [\"#pragma omp parallel for\",\n",
     "                                         \"#include \\\"rfm_files/rfm_struct__SIMD_outer_read2.h\\\"\",\n",
@@ -330,20 +332,9 @@
     "                                    params=\"outCverbose=False\")\n",
     "\n",
     "    with open(os.path.join(outdir,\"BSSN_constraints.h\"), \"w\") as file:\n",
-    "        file.write(\"\"\"\n",
-    "    void BSSN_constraints(const paramstruct *restrict params, REAL *restrict xx[3], \n",
-    "                          REAL *restrict in_gfs, REAL *restrict aux_gfs) {\n",
-    "    #include \"set_Cparameters.h\"\n",
-    "    \"\"\")\n",
-    "\n",
-    "        file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
-    "                           [\"NGHOSTS+Nxx2\",\"NGHOSTS+Nxx1\",\"NGHOSTS+Nxx0\"],\n",
-    "                           [\"1\",\"1\",\"1\"],\n",
-    "                           [\"#pragma omp parallel for\",\n",
-    "                            \"    const REAL xx2 = xx[2][i2];\",\n",
-    "                            \"        const REAL xx1 = xx[1][i1];\"], \"\",\n",
-    "                               \"const REAL xx0 = xx[0][i0];\\n\" + Ham_mom_string))\n",
-    "        file.write(\"}\\n\")\n",
+    "        file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"cctk_nghostzones[2]\",\"cctk_nghostzones[1]\",\"cctk_nghostzones[0]\"],\n",
+    "       [\"cctk_lsh[2]-cctk_nghostzones[2]\",\"cctk_lsh[1]-cctk_nghostzones[1]\",\"cctk_lsh[0]-cctk_nghostzones[0]\"],\n",
+    "                           [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"], \"\", Ham_mom_string))\n",
     "    end = time.time()\n",
     "    print(\"Finished Hamiltonian & momentum constraint C codegen in \" + str(end - start) + \" seconds.\")"
    ]
@@ -375,20 +366,13 @@
     "                                             params=\"outCverbose=False,preindent=0,includebraces=False\")\n",
     "\n",
     "    with open(os.path.join(outdir,\"enforce_detgammabar_constraint.h\"), \"w\") as file:\n",
-    "        indent = \"   \"\n",
-    "        file.write(\"\"\"\n",
-    "    void enforce_detgammabar_constraint(rfm_struct *restrict rfmstruct,\n",
-    "                                        const paramstruct *restrict params, REAL *restrict in_gfs) {\n",
-    "    #include \"set_Cparameters.h\"\n",
-    "    \"\"\")\n",
     "        file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\", \"0\", \"0\"],\n",
-    "                           [\"Nxx_plus_2NGHOSTS2\", \"Nxx_plus_2NGHOSTS1\", \"Nxx_plus_2NGHOSTS0\"],\n",
+    "                           [\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\n",
     "                           [\"1\",\"1\",\"1\"],\n",
     "                            [\"#pragma omp parallel for\",\n",
     "                                         \"#include \\\"rfm_files/rfm_struct__read2.h\\\"\",\n",
     "                                         \"#include \\\"rfm_files/rfm_struct__read1.h\\\"\"],\"\",\n",
     "                                         \"#include \\\"rfm_files/rfm_struct__read0.h\\\"\\n\"+enforce_gammadet_string))\n",
-    "        file.write(\"}\\n\")\n",
     "    end = time.time()\n",
     "    print(\"Finished gamma constraint C codegen in \" + str(end - start) + \" seconds.\")"
    ]
@@ -412,14 +396,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for BSSN RHSs in Cartesian coordinates.\n",
       "Generating C code for Ricci tensor in Cartesian coordinates.\n",
+      "Generating C code for BSSN RHSs in Cartesian coordinates.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen in 0.412467956543 seconds.\n",
+      "Finished gamma constraint C codegen in 0.494410037994 seconds.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished Hamiltonian & momentum constraint C codegen in 10.7111339569 seconds.\n",
-      "Finished BSSN_RHS C codegen in 77.6079871655 seconds.\n",
-      "Finished Ricci C codegen in 79.5126070976 seconds.\n"
+      "Finished Hamiltonian & momentum constraint C codegen in 12.7744271755 seconds.\n",
+      "Finished BSSN_RHS C codegen in 85.8439311981 seconds.\n",
+      "Finished Ricci C codegen in 86.2173979282 seconds.\n"
      ]
     }
    ],
@@ -559,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +645,7 @@
     "    file.write(\"CCTK_REAL evol_variables_rhs type = GF Timelevels=1 TAGS=\\'InterpNumTimelevels=1 prolongation=\\\"none\\\"\\'\\n{\\n\")\n",
     "    rhs_list = []\n",
     "    for gf in evol_gfs_list:\n",
-    "        rhs_list.append(gf+\"_rhs\")\n",
+    "        rhs_list.append(gf.replace(\"GF\",\"\")+\"_rhsGF\")\n",
     "    file.write(output_list_of_gfs(rhs_list,\"right-hand-side storage for BSSN evolved gridfunctions\"))\n",
     "    # Then AUX type:\n",
     "    file.write(\"CCTK_REAL aux_variables type = GF Timelevels=3\\n{\\n\")\n",
@@ -953,7 +937,7 @@
     "        if \"aDD\" in gf or \"trK\" in gf: # consistent with Lean code.\n",
     "            var_radpower = \"2.0\"\n",
     "\n",
-    "        file.write(\"  NewRad_Apply(cctkGH, \"+gf+\", \"+gf+\"_rhs, \"+var_at_infinite_r+\", \"+\n",
+    "        file.write(\"  NewRad_Apply(cctkGH, \"+gf+\", \"+gf.replace(\"GF\",\"\")+\"_rhsGF, \"+var_at_infinite_r+\", \"+\n",
     "                   var_char_speed+\", \"+var_radpower+\");\\n\")\n",
     "    file.write(\"}\\n\")"
    ]
@@ -975,33 +959,6 @@
    "source": [
     "# First we convert from ADM to BSSN, as is required to convert initial data \n",
     "#    (given using) ADM quantities, to the BSSN evolved variables\n",
-    "# # Create directory for BaikalETK thorn & subdirectories\n",
-    "# from outputC import *            # NRPy+: Core C code output module\n",
-    "# import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
-    "# import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
-    "# import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
-    "# import loop as lp                # NRPy+: Generate C code loops\n",
-    "# import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "# import reference_metric as rfm   # NRPy+: Reference metric support\n",
-    "# import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
-    "# import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
-    "# glb_gridfcs_list = []\n",
-    "# outrootdir = \"BaikalETK/\"\n",
-    "# cmd.mkdir(os.path.join(outrootdir))\n",
-    "# outdir = os.path.join(outrootdir,\"src\") # Main C code output directory\n",
-    "# cmd.mkdir(outdir)\n",
-    "# DIM = 3\n",
-    "# CoordSystem     = \"Cartesian\"\n",
-    "\n",
-    "# par.set_parval_from_str(\"reference_metric::CoordSystem\",CoordSystem)\n",
-    "# rfm.reference_metric()\n",
-    "# par.set_parval_from_str(\"grid::GridFuncMemAccess\",\"ETK\")\n",
-    "# make_code_defn_list = []\n",
-    "# def append_to_make_code_defn_list(filename):\n",
-    "#     if filename not in make_code_defn_list:\n",
-    "#         make_code_defn_list.append(filename)\n",
-    "#     return os.path.join(outdir,filename)\n",
-    "\n",
     "import BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear as atob\n",
     "IDhDD,IDaDD,IDtrK,IDvetU,IDbetU,IDalpha,IDcf,IDlambdaU = \\\n",
     "    atob.Convert_Spherical_or_Cartesian_ADM_to_BSSN_curvilinear(\"Cartesian\",\"DoNotOutputADMInputFunction\",outdir)\n",
@@ -1025,14 +982,14 @@
     "    DECLARE_CCTK_ARGUMENTS;\n",
     "    DECLARE_CCTK_PARAMETERS;\n",
     "    \n",
-    "    CCTK_REAL *alphaSphorCart = lapse;\n",
+    "    CCTK_REAL *alphaSphorCartGF = alp;\n",
     "\"\"\")\n",
     "    # It's ugly if we output code in the following ordering, so we'll first\n",
     "    #   output to a string and then sort the string to beautify the code a bit.\n",
     "    outstr = []\n",
     "    for i in range(DIM):\n",
-    "        outstr.append(\"    CCTK_REAL *betaSphorCartDD\"+str(i)+\"GF = beta\"+chr(ord('x')+i)+\";\\n\")\n",
-    "        outstr.append(\"    CCTK_REAL *BSphorCartDD\"+str(i)+\"GF = dtbeta\"+chr(ord('x')+i)+\";\\n\")\n",
+    "        outstr.append(\"    CCTK_REAL *betaSphorCartU\"+str(i)+\"GF = beta\"+chr(ord('x')+i)+\";\\n\")\n",
+    "        outstr.append(\"    CCTK_REAL *BSphorCartU\"+str(i)+\"GF = dtbeta\"+chr(ord('x')+i)+\";\\n\")\n",
     "        for j in range(i,DIM):\n",
     "            outstr.append(\"    CCTK_REAL *gammaSphorCartDD\"+str(i)+str(j)+\"GF = g\"+chr(ord('x')+i)+chr(ord('x')+j)+\";\\n\")\n",
     "            outstr.append(\"    CCTK_REAL *KSphorCartDD\"+str(i)+str(j)+\"GF = k\"+chr(ord('x')+i)+chr(ord('x')+j)+\";\\n\")\n",
@@ -1080,10 +1037,8 @@
     "    lambdaU_expressions_FDout = fin.FD_outputC(\"returnstring\",lambdaU_expressions, outCparams)\n",
     "\n",
     "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"cctk_nghostzones[2]\",\"cctk_nghostzones[1]\",\"cctk_nghostzones[0]\"],\n",
-    "                       [\"cctk_lsh[2]-cctk_nghostzones[2]\",\n",
-    "                        \"cctk_lsh[1]-cctk_nghostzones[1]\",\n",
-    "                        \"cctk_lsh[0]-cctk_nghostzones[0]\"],\n",
-    "                       [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",lambdaU_expressions_FDout))\n",
+    "       [\"cctk_lsh[2]-cctk_nghostzones[2]\",\"cctk_lsh[1]-cctk_nghostzones[1]\",\"cctk_lsh[0]-cctk_nghostzones[0]\"],\n",
+    "       [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",lambdaU_expressions_FDout))\n",
     "    \n",
     "    file.write(\"\"\"\n",
     "    ExtrapolateGammas(cctkGH,lambdaU0GF);\n",
@@ -1102,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1109,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4.c: Evaluate BSSN RHSs"
+    "## Step 4.c: Evaluate BSSN RHSs\n",
+    "\n",
+    "### Step 4.c.i: Evaluate Ricci tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(append_to_make_code_defn_list(\"driver_pt1_BSSN_Ricci.c\"), \"w\") as file:\n",
+    "    file.write(\"\"\"\n",
+    "#include <math.h>\n",
+    "\n",
+    "#include \"SIMD/SIMD_intrinsics.h\"\n",
+    "\n",
+    "#include \"cctk.h\"\n",
+    "#include \"cctk_Arguments.h\"\n",
+    "#include \"cctk_Parameters.h\"\n",
+    "\n",
+    "void driver_pt1_BSSN_Ricci(CCTK_ARGUMENTS) {\n",
+    "    DECLARE_CCTK_ARGUMENTS;\n",
+    "//    DECLARE_CCTK_PARAMETERS;\n",
+    "    \n",
+    "    const CCTK_REAL NOSIMDinvdx0 = 1.0/CCTK_DELTA_SPACE(0);\n",
+    "    const REAL_SIMD_ARRAY invdx0 = ConstSIMD(NOSIMDinvdx0);\n",
+    "    const CCTK_REAL NOSIMDinvdx1 = 1.0/CCTK_DELTA_SPACE(1);\n",
+    "    const REAL_SIMD_ARRAY invdx1 = ConstSIMD(NOSIMDinvdx1);\n",
+    "    const CCTK_REAL NOSIMDinvdx2 = 1.0/CCTK_DELTA_SPACE(2);\n",
+    "    const REAL_SIMD_ARRAY invdx2 = ConstSIMD(NOSIMDinvdx2);\n",
+    "#include \"BSSN_Ricci.h\"\n",
+    "}\\n\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4.c.ii: Evaluate BSSN RHSs, using Ricci tensor as input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(append_to_make_code_defn_list(\"driver_pt2_BSSN_RHSs.c\"), \"w\") as file:\n",
+    "    file.write(\"\"\"\n",
+    "#include <math.h>\n",
+    "\n",
+    "#include \"SIMD/SIMD_intrinsics.h\"\n",
+    "\n",
+    "#include \"cctk.h\"\n",
+    "#include \"cctk_Arguments.h\"\n",
+    "#include \"cctk_Parameters.h\"\n",
+    "\n",
+    "//void BSSN_RHSs()\n",
+    "\n",
+    "void driver_pt2_BSSN_RHSs(CCTK_ARGUMENTS) {\n",
+    "    DECLARE_CCTK_ARGUMENTS;\n",
+    "    //DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
+    "    const CCTK_REAL NOSIMDinvdx0 = 1.0/CCTK_DELTA_SPACE(0);\n",
+    "    const REAL_SIMD_ARRAY invdx0 = ConstSIMD(NOSIMDinvdx0);\n",
+    "    const CCTK_REAL NOSIMDinvdx1 = 1.0/CCTK_DELTA_SPACE(1);\n",
+    "    const REAL_SIMD_ARRAY invdx1 = ConstSIMD(NOSIMDinvdx1);\n",
+    "    const CCTK_REAL NOSIMDinvdx2 = 1.0/CCTK_DELTA_SPACE(2);\n",
+    "    const REAL_SIMD_ARRAY invdx2 = ConstSIMD(NOSIMDinvdx2);\n",
+    "    \n",
+    "    // FIXME: HACKY\n",
+    "    const CCTK_REAL *NOSIMDeta = CCTK_ParameterGet(\"eta\",\"BaikalETK\",NULL);\n",
+    "    const REAL_SIMD_ARRAY eta = ConstSIMD(*NOSIMDeta);\n",
+    "    const CCTK_REAL *NOSIMDdiss_strength = CCTK_ParameterGet(\"diss_strength\",\"BaikalETK\",NULL);\n",
+    "    const REAL_SIMD_ARRAY diss_strength = ConstSIMD(*NOSIMDdiss_strength);\n",
+    "    \n",
+    "#include \"BSSN_RHSs.h\"\n",
+    "}\\n\"\"\")"
    ]
   },
   {
@@ -1165,10 +1198,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(append_to_make_code_defn_list(\"enforce_detgammabar.c\"), \"w\") as file:\n",
+    "    file.write(\"\"\"\n",
+    "#include <math.h>\n",
+    "\n",
+    "#include \"cctk.h\"\n",
+    "#include \"cctk_Arguments.h\"\n",
+    "#include \"cctk_Parameters.h\"\n",
+    "\n",
+    "void enforce_detgammabar(CCTK_ARGUMENTS) {\n",
+    "    DECLARE_CCTK_ARGUMENTS;\n",
+    "    DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
+    "#include \"enforce_detgammabar_constraint.h\"\n",
+    "}\\n\"\"\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Step 4.e: Diagnostics: Computing Hamiltonian & momentum constraints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(append_to_make_code_defn_list(\"BSSN_constraints.c\"), \"w\") as file:\n",
+    "    file.write(\"\"\"\n",
+    "#include <math.h>\n",
+    "\n",
+    "#include \"cctk.h\"\n",
+    "#include \"cctk_Arguments.h\"\n",
+    "#include \"cctk_Parameters.h\"\n",
+    "\n",
+    "void BaikalETK_BSSN_constraints(CCTK_ARGUMENTS) {\n",
+    "    DECLARE_CCTK_ARGUMENTS;\n",
+    "    DECLARE_CCTK_PARAMETERS;\n",
+    "    \n",
+    "    const CCTK_REAL invdx0 = 1.0/CCTK_DELTA_SPACE(0);\n",
+    "    const CCTK_REAL invdx1 = 1.0/CCTK_DELTA_SPACE(1);\n",
+    "    const CCTK_REAL invdx2 = 1.0/CCTK_DELTA_SPACE(2);\n",
+    "    \n",
+    "#include \"BSSN_constraints.h\"\n",
+    "}\\n\"\"\")"
    ]
   },
   {
@@ -1180,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1311,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BaikalETK.ipynb to latex\n",
-      "[NbConvertApp] Writing 162488 bytes to Tutorial-BaikalETK.tex\n",
+      "[NbConvertApp] Writing 163208 bytes to Tutorial-BaikalETK.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
